Scrapped I1, use MMIO, FLAGS is now STS
This commit includes a bunch of different architectural changes
including I1 and I0 just becoming IP, FLAGS being renamed to STS, and
the physical I/O bus being converted into dedicated memory-mapped I/O.

--- a/Emulator/CMakeLists.txt
+++ b/Emulator/CMakeLists.txt
@@ -35,6 +35,7 @@ set(emulator_sources
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Instruction/Instruction.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/Instruction/Operand.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IO/IOBus.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/src/IO/IOMemoryRegion.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/IO/devices/ConsoleDevice.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/MMU/MemoryRegion.cpp
     ${CMAKE_CURRENT_SOURCE_DIR}/src/MMU/MMU.cpp
