Major performance improvements in Assembler, Emulator and LibArch
Many various different things were done to improve performance. Some
major ones were using builtin C functions instead of custom ones as they
are much fast, using more optimised linked lists, and building as O3
instead of O2. The last one didn't do too much, but did make a
difference.

There are also now no memory leaks in all 3 sub-projects.

Most of the performance improvement possiblities were discovered by
valgrind's tool callgrind.

--- a/Emulator/CMakeLists.txt
+++ b/Emulator/CMakeLists.txt
@@ -75,7 +75,12 @@ target_compile_options(Emulator
     PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-Wpedantic>
     PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-Wno-packed-bitfield-compat>
     PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-fstack-protector>
-    PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-O2>
+    PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-O3>
     PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-fno-omit-frame-pointer>
     PRIVATE $<$<COMPILE_LANGUAGE:CXX>:-fno-exceptions>
+    # PRIVATE $<$<COMPILE_LANGUAGE:CXX,C>:-fsanitize=undefined,address>
 )
+
+# target_link_options(Emulator
+#     PRIVATE $<$<LINK_LANGUAGE:CXX,C>:-fsanitize=undefined,address>
+# )
