--- a/Emulator/CMakeLists.txt
+++ b/Emulator/CMakeLists.txt
@@ -93,3 +93,5 @@ target_compile_options(Emulator
 # target_link_options(Emulator
 #     PRIVATE $<$<LINK_LANGUAGE:CXX,C>:-fsanitize=undefined,address>
 # )
+
+install(TARGETS Emulator DESTINATION ${CMAKE_SOURCE_DIR}/bin)
