Working paging, clang-tidy, ClangFormat, general clean-up
Paging is now working well. Still has not been fully tested.

There is now clang-tidy and ClangFormat for the project. This commit
also includes most of the changes made to align with these.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,7 +15,7 @@
 
 cmake_minimum_required(VERSION 3.20)
 
-project(Custom-Arch C CXX ASM_NASM)
+project(Frost64 C CXX ASM_NASM)
 
 if (NOT DEFINED BUILD_CONFIG)
     set(BUILD_CONFIG "Release")
